# ccbox

./: .c8rc.json  .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TESTING.md  TODO.md  ccbox.example.yaml  claude.bat  eslint.config.js  go.mod  go.sum  install.ps1  install.sh  lefthook.yml  package-lock.json  package.json  pyproject.toml  rebuild.bat  release-please-config.json  run.bat  run_claude_code.bat  version.txt
.claude/: cco-full.js  cco.md  settings.json  settings.local.json  statusline.js
.claude/rules/cco/: ci-cd.md  cli.md  container.md  context.md  python.md  testing.md
.github/workflows/: ci.yml  docker-images.yml  release.yml  version-check.yml
cmd/ccbox/: main.go
cmd/ccbox-fuse/: main.go
docs/: API.md  PATH-COVERAGE-GAPS.md  PATH-TRANSLATION.md  TROUBLESHOOTING.md
embedded/: ccbox-fuse-linux-amd64  embed.go  entrypoint.sh  fakepath.c.txt
internal/: integration_test.go
internal/bridge/: model.go  model_test.go  paste.go  register.go  run.go  session.go  terminal.go  update.go  update_test.go  view.go
internal/cli/: clean.go  paste.go  rebuild.go  root.go  run.go  run_test.go  stacks.go  uninstall.go  update.go  voice.go
internal/clipboard/: clipboard.go
internal/config/: config.go  config_test.go  file.go  file_test.go  stacks.go  stacks_test.go
internal/detect/: deps.go  deps_test.go  detector.go  detector_test.go
internal/docker/: cleanup.go  client.go  container.go  container_test.go  image.go
internal/fuse/: cache.go  cache_test.go  config.go  config_test.go  dirmap.go  dirmap_test.go  node.go  pathutil.go  pathutil_test.go  quickscan.go  trace.go  transform.go  transform_test.go
internal/generate/: dockerfile.go  entrypoint.go  generate_test.go  project.go  writer.go
internal/git/: credentials.go  credentials_test.go
internal/log/: log.go  log_test.go
internal/paths/: paths.go  paths_test.go
internal/platform/: platform.go  platform_test.go
internal/run/: args.go  args_test.go  env.go  host.go  mounts.go  phases.go
internal/upgrade/: upgrade.go
internal/voice/: voice.go  voice_test.go
native/: Dockerfile.build  build.sh  ccbox-fuse-linux-amd64  ccbox-fuse-linux-arm64  ccbox-fuse.c  fakepath.c
native/linux_amd64/: ccbox-fuse
native/linux_arm64/: ccbox-fuse
scripts/: build.ts  dev-install.sh
scripts/wrapper/: ccbox.cmd  ccbox.ps1  ccbox.sh
src/: bridge.ts  build.ts  cleanup.ts  cli.ts  clipboard.ts  config-file.ts  config.ts  constants.ts  deps.ts  detector.ts  docker-runtime.ts  docker-utils.ts  docker.ts  dockerfile-gen.ts  error-handler.ts  errors.ts  exec.ts  fuse-binaries.ts  generator.ts  index.ts  logger.ts  mcp.ts  paths.ts  platform.ts  prompt-io.ts  prompts.ts  stacks.ts  upgrade.ts  utils.ts  validation.ts  voice.ts
src/bridge/: index.ts  terminal.ts
src/ccbox/: __init__.py  cli.py  config.py  constants.py  deps.py  detector.py  docker.py  errors.py  generator.py  logging.py  paths.py  run_config.py  sleepctl.py  updater.py
src/ccbox/cli/: __init__.py  build.py  cleanup.py  prompts.py  run.py  utils.py
src/ccbox/scripts/: __init__.py  entrypoint.sh
src/ccbox/templates/: Dockerfile.template  compose.yml.template  entrypoint.sh.template
src/commands/: build-helpers.ts  build.ts  cleanup.ts  run-phases.ts  run.ts  upgrade.ts
src/dependencies/: cache.ts  detector.ts  index.ts  installer.ts  package-manager-profile.ts
src/docker/: cleanup.ts  command-builder.ts  container-constraints.ts  executor.ts  index.ts  inspect.ts  list-operations.ts  path-mapping.ts
src/docker/strategies/: index.ts
src/dockerfiles/: base.ts  index.ts  jvm.ts  other.ts  web.ts
src/http/: github-client.ts
src/interfaces/: dockerfile-generator.ts
src/platform/: detection.ts  platform-utils.ts
src/services/: cleanup-service.ts
src/templates/: entrypoint.sh
src/types/: docker-options.ts
src/utils/: retry-with-backoff.ts
tests/: __init__.py  conftest.py  e2e.mjs  test_cli.py  test_deps.py  test_docker.py  test_e2e.py  test_logging.py  test_paths.py  test_run_config.py  test_sleepctl.py  verify.mjs
tests/mocks/: docker-mock.ts
