[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccbox"
version = "1.0.0"
description = "Secure Docker environment for Claude Code CLI - isolated sandbox per project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["claude", "docker", "cli", "sandbox", "ai", "claude-code", "isolation"]
authors = [
    {name = "Sungur Zahid Erdim", email = "sungurerdim@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]

[project.urls]
Homepage = "https://github.com/sungurerdim/ccbox"
Repository = "https://github.com/sungurerdim/ccbox"
Issues = "https://github.com/sungurerdim/ccbox/issues"

[project.scripts]
ccbox = "ccbox.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ccbox = []

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Allow long lines in generator.py for Dockerfile command strings
"src/ccbox/generator.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
# Ignore missing stubs for click and rich (no official type stubs available)
ignore_missing_imports = true
# Allow untyped decorators from click (no type stubs available)
# Allow import-untyped for requests (types-requests is in dev deps)
disable_error_code = ["untyped-decorator", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
